Created feedservice and postservice

--- a/MAPPY_Backend/CommunityService.DataAccessLayer/appsettings.json
+++ b/MAPPY_Backend/CommunityService.DataAccessLayer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "logDb": "Server=localhost;Database=myDb1;Password=Welkom12345;Trusted_Connection=True;"
+    "communityDb": "Server=localhost;Database=myDb;Password=Welkom12345;Trusted_Connection=True;"
   }
 }
