--- a/MAPPY_Backend/CommunityService.DataAccessLayer/CommunityService.DataAccessLayer.csproj
+++ b/MAPPY_Backend/CommunityService.DataAccessLayer/CommunityService.DataAccessLayer.csproj
@@ -16,6 +16,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
