--- a/MAPPY_Backend/PostService.DataAccessLayer/PostService.DataAccessLayer.csproj
+++ b/MAPPY_Backend/PostService.DataAccessLayer/PostService.DataAccessLayer.csproj
@@ -7,10 +7,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CommunityService.DataAccessLayer\CommunityService.DataAccessLayer.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.14" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.14" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.14">
@@ -19,6 +15,7 @@
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
